<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="44dp"
            android:src="@drawable/ic_like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/introtext"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:typeface="sans"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="120dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/relevans"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSubject" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/performance"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et3"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/preparation"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et4"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et6"
            android:layout_width="70dp"
            android:layout_height="51dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ok"
            android:inputType="number"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et5" />

        <Button
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="6dp"
            android:background="@color/colorPrimary"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="17dp"
            android:background="@android:color/white"
            android:elevation="0dp"
            android:text="@string/reset"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/b1"
            app:layout_constraintTop_toBottomOf="@+id/et5" />

        <Spinner
            android:id="@+id/spinnerTeacher"
            android:layout_width="209dp"
            android:layout_height="39dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Spinner
            android:id="@+id/spinnerSubject"
            android:layout_width="209dp"
            android:layout_height="39dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTeacher" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="359dp"
            android:layout_height="36dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="14dp"
            android:fontFamily="sans-serif"
            android:text="@string/helpText"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@+id/et3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSubject"
            app:layout_constraintVertical_bias="0.625" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>